# llm-inference-labs

./: .env.template  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
1_baseline/notebooks/: vllm_testing.ipynb
1_baseline/prompts/: prompt.txt
1_baseline/results/: results.csv
1_baseline/scripts/: bench.py  serve_vllm.sh
