[project]
name = "llm-inference-labs"
version = "0.1.0"
description = "Exploration of LLMs inference techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.4.0",
]

[tool.ruff]
exclude = [
  ".git",
  "build",
  "dist",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
vllm = [
    "vllm>=0.11.0",
]
